RESOLVED FIXED158683
+[WebHTMLRepresentation supportedMIMETypes] leaks
https://bugs.webkit.org/show_bug.cgi?id=158683
Summary +[WebHTMLRepresentation supportedMIMETypes] leaks
Alexey Proskuryakov
Reported 2016-06-12 20:01:35 PDT
-[__NSArrayM insertObject:atIndex:] -[NSMutableArray insertObjects:count:atIndex:] -[NSMutableArray insertObjectsFromArray:range:atIndex:] -[NSMutableArray addObjectsFromArray:] +[WebHTMLRepresentation supportedMIMETypes] WebHTMLRepresentation.mm:109
Attachments
proposed fix (4.53 KB, patch)
2016-06-12 20:09 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2016-06-12 20:09:40 PDT
Created attachment 281149 [details] proposed fix
WebKit Commit Bot
Comment 2 2016-06-15 18:22:53 PDT
Comment on attachment 281149 [details] proposed fix Clearing flags on attachment: 281149 Committed r202118: <http://trac.webkit.org/changeset/202118>
WebKit Commit Bot
Comment 3 2016-06-15 18:22:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.